# kiara_plugin.topic_modelling

./: .cruft.json  .gitignore  AUTHORS.md  CHANGELOG.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: build-darwin.yaml  build-linux.yaml  build-windows.yaml
ci/conda/: conda-pkg-patch.yaml
docs/: development.md  index.md
docs/jupyter/: kiara_hildegard_network_analysis.ipynb  kiara_topic_modelling.ipynb  kiarapeana_topic_modeling.ipynb
examples/jobs/: example_job_topic_modelling.yaml  init.yaml  init.yaml.broken
examples/pipelines/: example_pipeline_topic_modelling.yaml  init.yaml
examples_no_tests/jobs/: onboarding_gh.yaml  onboarding_zenodo.yaml
scripts/documentation/: gen_info_pages.py  gen_module_doc.py
src/kiara_plugin/topic_modelling/: __init__.py  data_types.py  models.py  modules_dev_test.py
src/kiara_plugin/topic_modelling/modules/: __init__.py  corpus_metadata.py  corpus_preparation.py  eda.py  lda.py  onboarding.py  pre_process.py  stop_words.py
src/kiara_plugin/topic_modelling/pipelines/: table_from_github.yaml  tokenize_corpus.yaml
tests/: conftest.py  test_kiara_modules_default.py
tests/job_tests/parse_date/: outputs.py
tests/resources/jobs/: get_files_from_gh.yaml  init.yaml
tests/resources/pipelines/: init.yaml
